--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	// https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-envers
 	implementation("org.hibernate.orm:hibernate-envers:6.6.14.Final")
+	//Mercado Pago
+	implementation 'com.mercadopago:sdk-java:2.1.10'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
