--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	implementation("org.hibernate.orm:hibernate-envers:6.6.14.Final")
 	//Mercado Pago
 	implementation 'com.mercadopago:sdk-java:2.1.10'
+	implementation 'org.apache.poi:poi-ooxml:5.2.5'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
