--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=backAnana
+
+# Configuración de la base de datos MySQL Local
+spring.datasource.url=jdbc:mysql://localhost:3306/ananadb
+spring.datasource.username=root
+spring.datasource.password=Cin9227
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# Configuración de JPA para MySQL
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Configuración del puerto del servidor
+server.port=8081
+
+# Estrategia de nomenclatura para Hibernate
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
