--- a/build.gradle
+++ b/build.gradle
@@ -30,8 +30,11 @@ dependencies {
 	// https://mvnrepository.com/artifact/org.hibernate.orm/hibernate-envers
 	implementation("org.hibernate.orm:hibernate-envers:6.6.14.Final")
 	//Mercado Pago
-	implementation 'com.mercadopago:sdk-java:2.1.10'
-	implementation 'org.apache.poi:poi-ooxml:5.2.5'
+	implementation ('com.mercadopago:sdk-java:2.1.10') {
+		exclude group: 'com.google.guava', module: 'guava'
+		exclude group: 'com.google.collections', module: 'google-collections'
+	}
+	implementation 'org.apache.poi:poi-ooxml:5.4.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.mysql:mysql-connector-j'
