--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=backAnana
 # Configuración de la base de datos MySQL Local
 spring.datasource.url=jdbc:mysql://localhost:3306/ananadb
 spring.datasource.username=root
-spring.datasource.password=Cin9227
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
