--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=backAnana
 
 # Configuración de la base de datos MySQL Local
-spring.datasource.url=jdbc:mysql://localhost:3306/ananadb
-spring.datasource.username=root
-spring.datasource.password=Cin9227
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER_NAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
